--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,15 @@ h2 {
 
 nav {
     height: 50px;
+    flex: 100%;
     display: flex;
 }
 
 nav ul {
+    padding: 0;
     list-style-type: none;
+    flex: 2;
+    display: flex;
 }
 
 nav li {
