--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,15 @@ nav ul {
 nav li {
     display: inline;
     text-align: center;
+    flex: 1;
 }
 
 /* main layout */
 
 
-/* sidebar layout */
 
 aside {
     flex: 1;
-
+    margin-left: 15px;
+    padding: 2%;
 }
